# VTIL-Core

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VTIL-Core.sln  appveyor.yml
Dependencies/capstone/: CMakeLists.txt
VTIL/: CMakeLists.txt  VTIL.pc.in  VTIL.vcxproj  VTIL.vcxproj.filters
VTIL-Architecture/: CMakeLists.txt  LICENSE  README.md  VTIL-Architecture.licenseheader  VTIL-Architecture.pc.in  VTIL-Architecture.sln  VTIL-Architecture.vcxproj  VTIL-Architecture.vcxproj.filters
VTIL-Architecture/arch/: control_registers.cpp  control_registers.hpp  identifier.hpp  instruction_desc.cpp  instruction_desc.hpp  instruction_set.hpp  operands.hpp  register_desc.hpp  register_descriptor.hpp  register_details.hpp  register_view.cpp  register_view.hpp  registers.hpp
VTIL-Architecture/includes/: capstone.hpp  keystone.hpp  platform.hpp
VTIL-Architecture/misc/: debug.hpp  format.hpp
VTIL-Architecture/query/: query_desc.hpp  ranges.hpp  recursive_view.hpp  view.hpp
VTIL-Architecture/routine/: basic_block.cpp  basic_block.hpp  call_convention.hpp  instruction.cpp  instruction.hpp  routine.cpp  routine.hpp  routine_helpers.hpp  serialization.cpp  serialization.hpp
VTIL-Architecture/symbolic/: expression.hpp  generator.hpp  operators.hpp  rules.hpp  simplifier.hpp  variable.hpp
VTIL-Architecture/symex/: batch_translator.hpp  context.cpp  context.hpp  memory.cpp  memory.hpp  pointer.cpp  pointer.hpp  translation.cpp  translation.hpp  variable.cpp  variable.hpp
VTIL-Architecture/trace/: auxiliaries.cpp  auxiliaries.hpp  cached_tracer.cpp  cached_tracer.hpp  tracer.cpp  tracer.hpp
VTIL-Architecture/vm/: interface.cpp  interface.hpp  lambda.hpp  symbolic.cpp  symbolic.hpp
VTIL-Common/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  VTIL-Common.licenseheader  VTIL-Common.pc.in  VTIL-Common.sln  VTIL-Common.vcxproj  VTIL-Common.vcxproj.filters  assembler.cpp  assembler.hpp  disassembly.cpp  disassembly.hpp  emulator.cpp  formatting.hpp  register_details.hpp  rwx_allocator.cpp  rwx_allocator.hpp
VTIL-Common/amd64/: assembler.cpp  assembler.hpp  disassembler.cpp  disassembler.hpp  disassembly.cpp  disassembly.hpp  emulator.cpp  emulator.hpp  register_details.cpp  register_details.hpp
VTIL-Common/arch/: .gitignore  arch_size.hpp  register_mapping.hpp
VTIL-Common/ext/: colony.hpp
VTIL-Common/formats/: image_descriptor.hpp  winpe.cpp  winpe.hpp
VTIL-Common/io/: asserts.hpp  enum_name.hpp  fileio.hpp  formatting.hpp  logger.cpp  logger.hpp  strong_formatting.hpp  table_view.hpp
VTIL-Common/math/: bitwise.hpp  operable.hpp  operators.cpp  operators.hpp
VTIL-Common/memory/: copy_on_write.hpp  rwx_allocator.cpp  rwx_allocator.hpp
VTIL-Common/query/: fixed_iterator.hpp  query_descriptor.hpp  range_iterator.hpp  range_iterator_contract.hpp  recursive_view.hpp  view.hpp
VTIL-Common/util/: bitmap.hpp  concept.hpp  conditional_lock.hpp  constexpr_random.hpp  copy_on_write.hpp  critical_section.cpp  critical_section.hpp  deferred_value.hpp  detached_queue.hpp  dynamic_size.hpp  enumerator.hpp  finally.hpp  flat_allocator.hpp  fnv128.hpp  fnv64.hpp  function_view.hpp  hashable.hpp  intrinsics.hpp  joint_iterator.hpp  literals.hpp  lru_flatmap.hpp  lt_typeid.hpp  make_copy.hpp  make_default.hpp  mul128.hpp  multivariate.hpp  numeric_iterator.hpp  object_pool.hpp  optional_reference.hpp  ordered_hash.h  ordered_map.h  ordered_set.h  priority_list.hpp  profiler.hpp  random.hpp  range.hpp  reducable.hpp  relaxed_atomics.hpp  reverse_iterator.hpp  sinkhole.hpp  (+14 more)
VTIL-Compiler/: CMakeLists.txt  VTIL-Compiler.licenseheader  VTIL-Compiler.pc.in  VTIL-Compiler.vcxproj  VTIL-Compiler.vcxproj.filters  main.cpp
VTIL-Compiler/analysis/: symbolic_analysis.hpp
VTIL-Compiler/common/: apply_all.hpp  auxiliaries.cpp  auxiliaries.hpp  interface.hpp
VTIL-Compiler/optimizer/: bblock_extension_pass.cpp  bblock_extension_pass.hpp  bblock_thunk_removal_pass.cpp  bblock_thunk_removal_pass.hpp  branch_correction_pass.cpp  branch_correction_pass.hpp  dead_code_elimination_pass.cpp  dead_code_elimination_pass.hpp  fast_dead_code_elimination_pass.cpp  fast_dead_code_elimination_pass.hpp  fast_propagation_pass.cpp  fast_propagation_pass.hpp  istack_ref_substitution_pass.cpp  istack_ref_substitution_pass.hpp  mov_propagation_pass.cpp  mov_propagation_pass.hpp  register_renaming_pass.cpp  register_renaming_pass.hpp  stack_pinning_pass.cpp  stack_pinning_pass.hpp  stack_propagation_pass.cpp  stack_propagation_pass.hpp  symbolic_rewrite_pass.cpp  symbolic_rewrite_pass.hpp
VTIL-Compiler/passes/: bblock_extension_pass.cpp  bblock_extension_pass.hpp  register_renaming_pass.cpp  stack_pinning_pass.hpp  symbolic_rewrite_pass.cpp
VTIL-Compiler/validation/: pass_validation.cpp  pass_validation.hpp  test1.hpp  unit_test.hpp
VTIL-Optimizer/: CMakeLists.txt  VTIL-Optimizer.vcxproj  VTIL-Optimizer.vcxproj.filters  auxiliaries.cpp
VTIL-Optimizer/analysis/: cached_tracer.cpp  cached_tracer.hpp  trace.cpp  trace.hpp  variable.cpp  variable.hpp  variable_aux.cpp  variable_aux.hpp
VTIL-Optimizer/common/: apply_all.hpp  auxiliaries.cpp  auxiliaries.hpp  interface.hpp
VTIL-Optimizer/passes/: apply_all.hpp  bblock_extension_pass.cpp  bblock_extension_pass.hpp  bblock_rewriting_pass.hpp  branch_correction_pass.cpp  branch_correction_pass.hpp  dead_code_elimination_pass.cpp  dead_code_elimination_pass.hpp  eliminate_dead.cpp  eliminate_dead.hpp  interface.hpp  istack_ref_substitution_pass.cpp  istack_ref_substitution_pass.hpp  mov_propagation_pass.cpp  mov_propagation_pass.hpp  normalize_stack.cpp  normalize_stack.hpp  opaque_predicate_elimination_pass.cpp  opaque_predicate_elimination_pass.hpp  register_renaming_pass.cpp  register_renaming_pass.hpp  simplify_operations.cpp  simplify_operations.hpp  (+8 more)
VTIL-SymEx/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  VTIL-SymEx.pc.in  VTIL-SymEx.sln  VTIL-SymEx.vcxproj  VTIL-SymEx.vcxproj.filters  directive.cpp  directive.hpp  engine.hpp
VTIL-Tests/: CMakeLists.txt  VTIL-Tests.licenseheader  VTIL-Tests.vcxproj  VTIL-Tests.vcxproj.filters  dummy.cpp
(+82 files in other folders)
